Fix overflow issue in about-us page and optimize meta_query logic in get_products_for_category_and_brand.php

--- a/src/sass/pages/_about-us.scss
+++ b/src/sass/pages/_about-us.scss
@@ -39,8 +39,6 @@
             margin-bottom: 17rem;
             padding-left: vars.$sidePadding;
             padding-right: vars.$sidePadding;
-            overflow-x: hidden;
-            overflow-y: visible;
 
             &:nth-of-type(odd) {
                 flex-direction: row-reverse;
